--- a/application.yml
+++ b/application.yml
@@ -8,3 +8,5 @@ eureka:
     hostname: localhost 
 payment:
   endpoint: http://PAYMENTSERVICE/payment/doPayment
+logging:
+   file: C:\Users\Sakthi\Desktop\logs\microservice.log
