--- a/application.yml
+++ b/application.yml
@@ -1,13 +1,3 @@
-eureka:
-  client:
-    register-with-eureka: true 
-    fetch-registry: true 
-    service-url:
-      defaultZone: http://localhost:8761/eureka 
-  instance:
-    hostname: localhost 
-message: Hello world!
-payment:
-  endpoint: http://PAYMENTSERVICE/payment/createPayment
+message: Hello Buddy from git hub repo!
 
   
